--- a/packages/struct-rx/package.json
+++ b/packages/struct-rx/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "prepublish": "tsc",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["react", "global", "state", "management", "reactive", "structure"],
