--- a/examples/todo-app/package.json
+++ b/examples/todo-app/package.json
@@ -1,20 +1,45 @@
 {
-  "name": "example-todo-app",
+  "name": "todo-app",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
-  },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/react": "^18.0.15",
-    "typescript": "^4.7.4"
+  "private": true,
+  "main": "dist/index.js",
+  "scripts": {
+    "start": "webpack serve --port 3000 --config config/webpack.config.js",
+    "build": "NODE_ENV=production webpack --config config/webpack.config.js",
+    "test": "(mkdirp cov && jest --config config/jest.config.json --coverage 2>&1) || (realpath cov/index.html && exit 1)",
+    "lint": "(mkdirp lint && eslint src > lint/lint.log) || (realpath lint/lint.log && exit 1)"
   },
   "dependencies": {
-    "struct-rx": "~0.0.4",
-    "react": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "struct-rx": "0.0.4"
+  },
+  "devDependencies": {
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.0",
+    "webpack-dev-server": "4.11.1",
+    "css-loader": "6.7.2",
+    "html-webpack-plugin": "5.5.0",
+    "mini-css-extract-plugin": "2.7.0",
+    "@svgr/webpack": "6.5.1",
+    "ts-loader": "9.4.1",
+    "typescript": "4.8.4",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.8",
+    "jest": "29.3.1",
+    "jest-junit": "14.0.1",
+    "ts-jest": "29.0.3",
+    "@types/jest": "29.2.3",
+    "eslint": "8.20.0",
+    "@typescript-eslint/eslint-plugin": "5.36.2",
+    "@typescript-eslint/parser": "5.36.2",
+    "prettier": "2.6.2",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-config-prettier": "8.5.0",
+    "mkdirp": "1.0.4",
+    "fs.realpath": "1.0.0"
   }
 }
