--- a/packages/struct-rx/config/jest.config.json
+++ b/packages/struct-rx/config/jest.config.json
@@ -1,14 +1,15 @@
+
 {
   "passWithNoTests": true,
   "rootDir": "../",
   "roots": ["<rootDir>/src"],
-  "testMatch": ["<rootDir>/src/**/*.(test|spec).{ts,tsx}"],
+  "testMatch": ["<rootDir>/src/**/*.{test,spec}.{ts,tsx}"],
   "coverageDirectory": "cov",
-  "moduleFileExtensions": ["js", "json", "ts", "node"],
+  "moduleFileExtensions": ["js", "json", "ts", "tsx", "node"],
   "preset": "ts-jest",
-  "testEnvironment": "node",
+  "testEnvironment": "jsdom",
   "testPathIgnorePatterns": ["node_modules/", "dist/"],
-  "collectCoverageFrom": ["src/**/*.{ts,tsx}", "!**/node_modules/**"],
+  "collectCoverageFrom": ["src/**/*.{ts,tsx}", "!**/node_modules/**", "!src/test/**"],
   "modulePathIgnorePatterns": ["dist"],
   "coverageReporters": ["html"],
   "testTimeout": 10000,
