--- a/examples/todo-app/package.json
+++ b/examples/todo-app/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-config-prettier": "8.5.0",
     "mkdirp": "1.0.4",
-    "fs.realpath": "1.0.0"
+    "fs.realpath": "1.0.0",
+    "file-loader": "6.2.0"
   }
 }
