--- a/packages/struct-rx/package.json
+++ b/packages/struct-rx/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "18.0.8",
     "jest": "29.3.1",
     "jest-junit": "14.0.1",
+    "jest-environment-jsdom": "29.3.1",
     "ts-jest": "29.0.3",
     "@types/jest": "29.2.3",
     "eslint": "8.20.0",
