--- a/packages/struct-rx/tsconfig.json
+++ b/packages/struct-rx/tsconfig.json
@@ -11,7 +11,7 @@
     "outDir": "dist",
     "rootDir": "src",
     "types": ["jest"],
-    "lib": ["ES2020"],
+    "lib": ["ES2020", "DOM"],
     "sourceMap": true,
     "isolatedModules": true,
     "jsx": "react-jsx"
